--- a/_data/PI.yml
+++ b/_data/PI.yml
@@ -1,4 +1,4 @@
-- name: Chao Zhang
+- name: <a href="https://grzy.hnu.edu.cn/site/index/zhangchao"> Chao Zhang</a>
   photo: Chaozhang.jpg
   info1: Professor, started 2019
   info2: Associate Dean, started 2021
