--- a/_data/Phd_student.yml
+++ b/_data/Phd_student.yml
@@ -1,5 +1,5 @@
 - name: Jianbo Wang
-  photo: 
+  photo: rock.jpg
   info1: Research topic - 
   info2: 
   email: 
@@ -8,7 +8,7 @@
   education2: M.S. Hunan University
 
 - name: Zhengan Liu
-  photo: 
+  photo: rock.jpg
   info1: Research topic - 
   info2: 
   email: 
