--- a/_data/Phd_student.yml
+++ b/_data/Phd_student.yml
@@ -2,7 +2,7 @@
   photo: rock.jpg
   info1: Research topic - 
   info2: 
-  email: 
+  email: xxx@hnu.edu.cn
   number_educ: 2
   education1: B.S. Hunan University
   education2: M.S. Hunan University
@@ -11,7 +11,7 @@
   photo: rock.jpg
   info1: Research topic - 
   info2: 
-  email: 
+  email: xxx@hnu.edu.cn
   number_educ: 2 
   education1: B.S. Central South University
   education2: M.S. Central South University
