--- a/_data/Master.yml
+++ b/_data/Master.yml
@@ -1,6 +1,6 @@
 - name: Yuhao Ren
   photo: rock.jpg
-  info1: research topic - AI for EPBS tunneling
+  info1: Research topic - AI for EPBS tunneling
   email: renyuhao@hnu.edu.cn
   number_educ: 1
   education1: B.S. Chongqing Jiaotong University
