--- a/_data/Phd_student.yml
+++ b/_data/Phd_student.yml
@@ -1,18 +1,68 @@
 - name: Jianbo Wang
-  photo: rock.jpg
-  info1: Research topic - 
+  photo: WJB.jpeg
+  info1: Research topic - Unsaturated soil mechanics
   info2: 
-  email: xxx@hnu.edu.cn
+  email: wangjianbo93@hnu.edu.cn
   number_educ: 2
   education1: B.S. Hunan University
   education2: M.S. Hunan University
 
 - name: Zhengan Liu
-  photo: rock.jpg
-  info1: Research topic - 
+  photo: LZA.jpeg
+  info1: Research topic - Underground structural testing techniques
   info2: 
-  email: xxx@hnu.edu.cn
+  email: zaliu@hnu.edu.cn
   number_educ: 2 
   education1: B.S. Central South University
   education2: M.S. Central South University
+
+- name: Ningning Zhao
+  photo: ZNN.jpeg
+  info1: Research topic - Phase transition in porous media
+  info2: 
+  email: zhaoningning@hnu.edu.cn
+  number_educ: 2 
+  education1: B.S. Central South University
+  education2: M.S. Central South University
+
+- name: Shaojie Hu
+  photo: HSJ.jpeg
+  info1: Research topic - Unsaturated soils
+  info2: 
+  email: sjhu@hnu.edu.cn
+  number_educ: 1 
+  education1: B.S. Hunan University
+
+- name: Yangkai Gong
+  photo: rock.jpg
+  info1: Research topic - Shield tunneling simulation, AI for shield tunneling
+  info2: 
+  email: gongyk@hnu.edu.cn
+  number_educ: 1 
+  education1: B.S. Guangxi University
+
+- name: Zhenhai Liu
+  photo: LZH.jpeg
+  info1: Research topic - Deep soil mechanics
+  info2: 
+  email: liuzh@hnu.edu.cn
+  number_educ: 1 
+  education1: B.S. Guangxi University
+
+- name: Yuhan Yang
+  photo: YYH.jpeg
+  info1: Research topic - Desiccation cracking of granular materials
+  info2: 
+  email: liuzh@hnu.edu.cn
+  number_educ: 1 
+  education1: B.S. Guangxi University
+
+- name: Jihao Yuan
+  photo: YJH.jpeg
+  info1: Research topic - AI for EPBS tunneling
+  info2: 
+  email: liuzh@hnu.edu.cn
+  number_educ: 1 
+  education1: B.S. Guangxi University
+
 
