--- a/_data/Phd_student.yml
+++ b/_data/Phd_student.yml
@@ -2,7 +2,7 @@
   photo: WJB.jpeg
   info1: Research topic - Unsaturated soil mechanics
   info2: 
-  email: wangjianbo93@hnu.edu.cn
+  email: email - wangjianbo93@hnu.edu.cn
   number_educ: 2
   education1: B.S. Hunan University
   education2: M.S. Hunan University
@@ -11,7 +11,7 @@
   photo: LZA.jpeg
   info1: Research topic - Underground structural testing techniques
   info2: 
-  email: zaliu@hnu.edu.cn
+  email: email - zaliu@hnu.edu.cn
   number_educ: 2 
   education1: B.S. Central South University
   education2: M.S. Central South University
@@ -20,32 +20,32 @@
   photo: ZNN.jpeg
   info1: Research topic - Phase transition in porous media
   info2: 
-  email: zhaoningning@hnu.edu.cn
+  email: email - zhaoningning@hnu.edu.cn
   number_educ: 2 
   education1: B.S. Central South University
   education2: M.S. Central South University
 
-- name: Shaojie Hu
+- name: <a href="https://sjhu7.github.io/"> Shaojie Hu </a>
   photo: HSJ.jpeg
   info1: Research topic - Unsaturated soils
   info2: 
-  email: sjhu@hnu.edu.cn
+  email: email - sjhu@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
 - name: Yangkai Gong
   photo: rock.jpg
-  info1: Research topic - Shield tunneling simulation, AI for shield tunneling
+  info1: Research topic -  AI for shield tunneling
   info2: 
-  email: gongyk@hnu.edu.cn
+  email: email - gongyk@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Guangxi University
 
-- name: Zhenhai LiuHunan
+- name: Zhenhai Liu
   photo: LZH.jpeg
   info1: Research topic - Deep soil mechanics
   info2: 
-  email: liuzh@hnu.edu.cn
+  email: email - liuzh@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
@@ -53,15 +53,15 @@
   photo: YYH.jpeg
   info1: Research topic - Desiccation cracking of granular materials
   info2: 
-  email: liuzh@hnu.edu.cn
+  email: email - liuzh@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
 - name: Jihao Yuan
-  photo: YJH.jpeg
+  photo: YJH.jpg
   info1: Research topic - AI for EPBS tunneling
   info2: 
-  email: 13597885026@hnu.edu.cn
+  email: email - 13597885026@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
