--- a/_data/Master.yml
+++ b/_data/Master.yml
@@ -20,7 +20,7 @@
   education1: B.S. Hunan University
 
 - name: <a href="https://renyuhao825.github.io/"> Yuhao Ren</a>
-  photo: RYH.jpg
+  photo: RYH.jpeg
   info1: Research topic - AI for EPBS tunneling
   email: Email - renyuhao@hnu.edu.cn
   number_educ: 1
@@ -69,7 +69,7 @@
   education1: B.S. Hunan University
 
 - name: Yi Dai
-  photo: DY.jpeg
+  photo: DY.jpg
   info1: Research topic - TBD
   email: Email - daiyi@hnu.edu.cn
   number_educ: 1
