--- a/_data/Master.yml
+++ b/_data/Master.yml
@@ -85,7 +85,7 @@
 - name: Yaojun Qian
   photo: QYJ.jpeg
   info1: Research topic - TBD
-  email: Email - guodongwu@whut.edu.cn
+  email: Email - qianyaojun@hnu.edu.cn
   number_educ: 1
   education1: B.S. Xi 'an University of Technology
 
