--- a/_data/Phd_student.yml
+++ b/_data/Phd_student.yml
@@ -2,7 +2,7 @@
   photo: WJB.jpeg
   info1: Research topic - Unsaturated soil mechanics
   info2: 
-  email: email - wangjianbo93@hnu.edu.cn
+  email: Email - wangjianbo93@hnu.edu.cn
   number_educ: 2
   education1: B.S. Hunan University
   education2: M.S. Hunan University
@@ -11,7 +11,7 @@
   photo: LZA.jpeg
   info1: Research topic - Underground structural testing techniques
   info2: 
-  email: email - zaliu@hnu.edu.cn
+  email: Email - zaliu@hnu.edu.cn
   number_educ: 2 
   education1: B.S. Central South University
   education2: M.S. Central South University
@@ -20,7 +20,7 @@
   photo: ZNN.jpeg
   info1: Research topic - Phase transition in porous media
   info2: 
-  email: email - zhaoningning@hnu.edu.cn
+  email: Email - zhaoningning@hnu.edu.cn
   number_educ: 2 
   education1: B.S. Central South University
   education2: M.S. Central South University
@@ -29,7 +29,7 @@
   photo: HSJ.jpeg
   info1: Research topic - Unsaturated soils
   info2: 
-  email: email - sjhu@hnu.edu.cn
+  email: Email - sjhu@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
@@ -37,7 +37,7 @@
   photo: rock.jpg
   info1: Research topic -  AI for shield tunneling
   info2: 
-  email: email - gongyk@hnu.edu.cn
+  email: Email - gongyk@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Guangxi University
 
@@ -45,7 +45,7 @@
   photo: LZH.jpeg
   info1: Research topic - Deep soil mechanics
   info2: 
-  email: email - liuzh@hnu.edu.cn
+  email: Email - liuzh@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
@@ -53,7 +53,7 @@
   photo: YYH.jpeg
   info1: Research topic - Desiccation cracking of granular materials
   info2: 
-  email: email - liuzh@hnu.edu.cn
+  email: Email - liuzh@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
@@ -61,7 +61,7 @@
   photo: YJH.jpg
   info1: Research topic - AI for EPBS tunneling
   info2: 
-  email: email - 13597885026@hnu.edu.cn
+  email: Email - 13597885026@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
