--- a/_data/Master.yml
+++ b/_data/Master.yml
@@ -83,7 +83,7 @@
   education1: B.S. Wuhan University of Technology
 
 - name: Yaojun Qian
-  photo: QYJ.jpeg
+  photo: QYJ.jpg
   info1: Research topic - TBD
   email: Email - qianyaojun@hnu.edu.cn
   number_educ: 1
