--- a/_data/Phd_student.yml
+++ b/_data/Phd_student.yml
@@ -53,7 +53,7 @@
   photo: YYH.jpeg
   info1: Research topic - Desiccation cracking of granular materials
   info2: 
-  email: Email - liuzh@hnu.edu.cn
+  email: Email - yhyang@hnu.edu.cn
   number_educ: 1 
   education1: B.S. Hunan University
 
