--- a/_data/UNSAT_Student.yml
+++ b/_data/UNSAT_Student.yml
@@ -34,7 +34,7 @@
   education1: B.S. Hunan University
 
 - name: Yangkai Gong
-  photo: GYK.jpg
+  photo: GYK.jpeg
   info1: Research topic - AI for shield tunneling
   info2: WeChat - gongyk_
   email: Email - gongyk@hnu.edu.cn
