--- a/_data/UNSAT_Student.yml
+++ b/_data/UNSAT_Student.yml
@@ -17,7 +17,7 @@
   education2: M.S. Central South University
 
 - name: Ningning Zhao
-  photo: ZNN-2.png
+  photo: ZNN.png
   info1: Research topic - Phase transition in porous media
   info2: WeChat - zngovernment
   email: Email - zhaoningning@hnu.edu.cn
