--- a/_data/team3.yml
+++ b/_data/team3.yml
@@ -22,6 +22,14 @@
   number_educ: 1
   education1: B.S. Chongqing Jiaotong University
 
+- name: Yu Zhang
+  photo: ZY.jpg
+  info1: Research topic - AI for EPBS tunneling
+  info2: WeChat - wxid_is9rr3un7n8r22
+  email: Email - zhangyu2022.hnu.edu.cn
+  number_educ: 1 
+  education1: B.S. Hunan University
+
 - name: Jihao Yuan
   photo: YJH.jpg
   info1: Research topic - AI for EPBS tunneling
