--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -8,7 +8,7 @@
   education2: M.S. Hunan University
 
 - name: Zhenhai Liu
-  photo: LZH.jpg
+  photo: LZH (2).jpg
   info1: Research topic - Deep soil mechanics
   info2: WeChat - lzh980204
   email: Email - liuzh@hnu.edu.cn
