--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -1,5 +1,5 @@
 - name: Jianbo Wang
-  photo: WJB.jpeg
+  photo: WJB.png
   info1: Research topic - Unsaturated soil mechanics
   info2: WeChat - Leonenor
   email: Email - wangjianbo93@hnu.edu.cn
