--- a/_data/team3.yml
+++ b/_data/team3.yml
@@ -23,7 +23,7 @@
   education1: B.S. Chongqing Jiaotong University
 
 - name: Yu Zhang
-  photo: ZY.jpg
+  photo: ZY.png
   info1: Research topic - AI for EPBS tunneling
   info2: WeChat - wxid_is9rr3un7n8r22
   email: Email - zhangyu2022.hnu.edu.cn
