--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -16,7 +16,7 @@
   education1: B.S. Hunan University
 
 - name: Jiaxing Zhou
-  photo: ZJX.jpeg
+  photo: ZJX.png
   info1: Research topic - Sustainable and Resilient Underground Structures
   info2: WeChat - ZJX20000207
   email: Email - zhou_jx@hnu.edu.cn
