--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -8,7 +8,7 @@
   education2: M.S. Central South University
 
 - name: Zhixiong Lang
-  photo: LZX.jpg
+  photo: LZX2.png
   info1: Research topic - Resilient underground space
   info2: WeChat - lzx19491001lzx
   email: Email - lzx1949@hnu.edu.cn
