--- a/_data/team3.yml
+++ b/_data/team3.yml
@@ -7,7 +7,7 @@
   education1: B.S. Guangxi University
 
 - name: Ziheng Geng
-  photo: GZH2.png
+  photo: gzh2.png
   info1: Research topic - AI for EPBS tunneling
   info2: WeChat - simplify1113
   email: Email - gengziheng@hnu.edu.cn
