--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -1,5 +1,5 @@
 - name: Ningning Zhao
-  photo: ZNN.png
+  photo: ZNN.jpeg
   info1: Research topic - Phase transition in porous media
   info2: WeChat - zngovernment
   email: Email - zhaoningning@hnu.edu.cn
