--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -3,10 +3,11 @@
   info1: 
   info2: 
   email: <a href="mailto:zaz336@miami.edu">Email - zaz336@miami.edu</a>
-  number_educ: 3 
-  education1: Ph.D. student, University of Miami, FL & Washington State University, WA
-  education2: M.S., University of Jinan, China
-  education3: B.S. University of Jinan, China
+  number_educ: 4 
+  education1: Ph.D. student, University of Miami, FL
+  education2: Ph.D. student, Washington State University, WA
+  education3: M.S., University of Jinan, China
+  education4: B.S. University of Jinan, China
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Ali Mahmoodigahrouei </a>
   photo: Ali.png
