--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,8 +1,8 @@
-- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhiliang Zhou </a>
-  photo: ZZL.png
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
+  photo: ZPL.jpg
   info1: 
   info2: 
-  email: <a href="mailto:zaz336@miami.edu">Email - zaz336@miami.edu</a>
+  email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 3
   education1: Ph.D. student, University of Miami, FL & Washington State University, WA
   education2: M.S., University of Jinan, China
