--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -3,11 +3,10 @@
   info1: Assistant Director
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
-  number_educ: 4
+  number_educ: 3
   education1: Ph.D., Washington State University, WA
-  education2: M.S., Washington State University, WA
-  education3: M.S., Wuhan Polytechnic University, China
-  education4: B.S. Wuhan University of Sci and Tech, China
+  education2: M.S., Washington State University, WA & Wuhan Polytechnic University, China
+  education3: B.S. Wuhan University of Sci and Tech, China
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
   photo: YD.jpg
