--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -5,7 +5,7 @@
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 3
   education1: Ph.D., Washington State University, WA
-  education2: M.S., Washington State University, WA & Wuhan Polytechnic University, China
+  education2: M.S., Washington State University (2023), WA & Wuhan Polytechnic University (2017), China
   education3: B.S. Wuhan University of Sci and Tech, China
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
