--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,3 +1,5 @@
+Academia, Industry, Professional, and Leadership
+
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
   info1: Assistant Director
