--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,4 +1,4 @@
-Academia, Industry, Professional, and Leadership
+info1: Academia, Industry, Professional, and Leadership
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
