--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -2,7 +2,8 @@ info1: Academia, Industry, Professional, and Leadership
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
-  info1: Assistant Director
+  duration: In the Dr.Shi Lab 2023 - 2024, now Project manager at the CarbonSilvanus company
+  info1: 
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 3
@@ -12,7 +13,8 @@ info1: Academia, Industry, Professional, and Leadership
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
   photo: YD.jpg
-  info1: Research Assistant Professor
+  duration: In the Dr.Shi Lab 2023 - 2024, now Research Fellow at South China University of Technology
+  info1:
   info2: 
   email: <a href="mailto:yong.deng1@wsu.edu">Email - yong.deng1@wsu.edu</a>
   number_educ: 3
