--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,9 +1,7 @@
-info1: Academia, Industry, Professional, and Leadership
-
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
-  duration: In the Dr.Shi Lab 2023 - 2024, now Project manager at the CarbonSilvanus company
-  info1: 
+  duration: In the Dr.Shi Lab 2023 - 2024, now CTO CarbonSilvanus company
+  info1:  
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 3
