--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,6 +1,6 @@
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
-  duration: In the Dr.Shi Lab 2023 - 2024, now CTO CarbonSilvanus company
+  duration: In the Dr.Shi Lab 2019 - present, now CTO CarbonSilvanus company
   info1:  
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
@@ -11,7 +11,7 @@
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
   photo: YD.jpg
-  duration: In the Dr.Shi Lab 2023 - 2024, now Research Fellow at South China University of Technology
+  duration: In the Dr.Shi Lab 2021 - 2024, now Research Fellow at South China University of Technology
   info1:
   info2: 
   email: <a href="mailto:yong.deng1@wsu.edu">Email - yong.deng1@wsu.edu</a>
