--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -8,6 +8,14 @@
   education2: Ph.D. Beijing Normal University 
   education3: B.S. Hunan Normal University(2016)
 
-
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
+  photo: ZPL.jpg
+  info1: duration: In the Dr.Shi Lab 2019 - present, now CTO of CarbonSilvanus company
+  info2: 
+  email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
+  number_educ: 3
+  education1: Ph.D., Washington State University, WA
+  education2: M.S., Washington State University (2023), WA & Wuhan Polytechnic University (2017), China
+  education3: B.S. Wuhan University of Sci and Tech, China
 
   
