--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -1,17 +1,17 @@
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
-  info1: In the Dr.Shi Lab 2019 - present, now CTO of CarbonSilvanus company
+  info1: now CTO of CarbonSilvanus company (2019-present)
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 3
-  education1: Ph.D., Washington State University, WA
-  education2: M.S., Washington State University (2023), WA & Wuhan Polytechnic University (2017), China
+  education1: Ph.D. Washington State University, WA
+  education2: M.S. Washington State University (2023), WA & Wuhan Polytechnic University (2017), China
   education3: B.S. Wuhan University of Sci and Tech, China
 
   - name: <a href="https://sjhu7.github.io/"> Meili (Mandy) Liu </a>
   photo: MLL.jpg
-  info1: 
+  info1: Post-Doctoral Associate
   info2: 
   email: <a href="mailto:mxl2120@miami.edu">Email - mxl2120@miami.edu</a>
   number_educ: 2 
