--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -14,8 +14,9 @@
   info1: Post-Doctoral Associate
   info2: 
   email: <a href="mailto:mxl2120@miami.edu">Email - mxl2120@miami.edu</a>
-  number_educ: 2 
-  education1: Ph.D. A joint program between University of California, Berkeley & Beijing Normal University 
-  education2: B.S. Hunan Normal University(2016)
+  number_educ: 3 
+  education1: Ph.D. University of California, Berkeley (2019-2021)
+  education2: Ph.D. Beijing Normal University (2016-2019) 
+  education3: B.S. Hunan Normal University(2016)
 
   
