--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -4,9 +4,10 @@
   info1: now CTO of CarbonSilvanus company (2019-present)
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
-  number_educ: 3
+  number_educ: 4
   education1: Ph.D. Washington State University, WA
-  education2: M.S. Washington State University (2023), WA & Wuhan Polytechnic University (2017), China
+  education2: M.S. Washington State University,WA (2023)
+  education3: Wuhan Polytechnic University,China (2017) 
   education3: B.S. Wuhan University of Sci and Tech, China
 
 - name: <a href="https://sjhu7.github.io/"> Meili (Mandy) Liu </a>
@@ -15,8 +16,8 @@
   info2: 
   email: <a href="mailto:mxl2120@miami.edu">Email - mxl2120@miami.edu</a>
   number_educ: 3 
-  education1: Ph.D. University of California, Berkeley (2019-2021)
-  education2: Ph.D. Beijing Normal University (2018-2019) 
+  education1: Ph.D. University of California, Berkeley (2021)
+  education2: Ph.D. Beijing Normal University (2019) 
   education3: B.S. Hunan Normal University(2016)
 
   
