--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -1,8 +1,8 @@
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
-  info1: now CTO of CarbonSilvanus company (2019-present)
-  info2: 
+  info1: now CTO of CarbonSilvanus company
+  info2: In Dr. Shi group, 2019-present
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 4
   education1: Ph.D. Washington State University, WA
