--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -1,13 +1,13 @@
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
   photo: ZPL.jpg
-  info1: now CTO of CarbonSilvanus company
-  info2: In Dr. Shi group, 2019-present
+  info1: CTO of CarbonSilvanus company
+  info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 4
   education1: Ph.D. Washington State University, WA
   education2: M.S. Washington State University,WA (2023)
-  education3: Wuhan Polytechnic University,China (2017) 
+  education3: M.S. Wuhan Polytechnic University,China (2017) 
   education4: B.S. Wuhan University of Sci and Tech, China
 
 - name: <a href="https://sjhu7.github.io/"> Meili (Mandy) Liu </a>
