--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,7 +1,7 @@
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
   photo: YD.jpg
-  info1: now Research Fellow at South China University of Technology
-  info2: In the Dr.Shi Lab 2021 - 2024
+  info1: Research Fellow at South China University of Technology
+  info2: 
   email: <a href="mailto:yong.deng1@wsu.edu">Email - yong.deng1@wsu.edu</a>
   number_educ: 3
   education1: Ph.D., Washington State University, WA
