--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -1,6 +1,6 @@
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Zhipeng Li </a>
-  photo: ZPL.jpg
+  photo: LZP1.jpg
   info1: CTO of CarbonSilvanus company
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
