--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,6 +1,6 @@
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
   photo: YD.jpg
-  info1: Research Fellow at South China University of Technology
+  info1: Research Fellow at South China University of Technology, China
   info2: 
   email: <a href="mailto:yong.deng1@wsu.edu">Email - yong.deng1@wsu.edu</a>
   number_educ: 3
