--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -18,6 +18,58 @@
   education2: M.S. Texas A&M University (2017)
   education3: M.S. Wuhan University of Technology, China (2015)
 
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Jie Zhao </a>
+  photo: JZ.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 3
+  education1: Ph.D. Washington State University (2022)
+  education2: M.S. Chang'an University, China (2016)
+  education3: M.S. Chang'an University, China (2013)
+
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Ayumi Manawadu </a>
+  photo: Ayumi.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 3
+  education1: Ph.D. Washington State University (2022)
+  education2: M.S. Washington State University (2019)
+  education3: M.S. University of Peradeniya, Sri Lanka (2015)
+
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Mehdi Honarvar Nazari </a>
+  photo: Mehdi.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 2
+  education1: Ph.D. Washington State University (2024)
+  education2: Ph.D. University of Tehran, Iran (2010)
+
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Seth Tawiah </a>
+  photo: Seth.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 2
+  education1: Ph.D. Washington State University (2024)
+  education2: M.S. Hong Kong University of Science and Technology (2019)
+
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Akinleye Taiwo Olawale </a>
+  photo: Akinleye.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 3
+  education1: Ph.D. Washington State University 
+  education2: M.S. Washington State University (2021)
+  education3: M. Eng. The Federal University of Technology, Akure, Nigeria (2018)
+
+  
+  
+
+
   
   
 
