--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -19,4 +19,25 @@
   education2: Ph.D. student, Washington State University, WA (2022-2024)
   education3: M.S. Armirkabir University of Technology, Iran.
 
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Chuang Chen </a>
+  photo: CC.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 4
+  education1: Ph.D. student Washington State University 
+  education2: M.S. University of Texas at Dallas (2020)
+  education3: M.S. Dalian University of Technology, China (2009)
+  education4: B.S. Dalian University of Technology, China (2006)
+
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Amir Ali Shahmansouri </a>
+  photo: Amir.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 3
+  education1: Ph.D. student Washington State University 
+  education2: M.S. University of Mazandaran (2022)
+  education3: B.S. Shomal University (2009)
+
   
