--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -25,7 +25,7 @@
   info2: 
   email: 
   number_educ: 4
-  education1: Ph.D. student Washington State University 
+  education1: Ph.D. student, Washington State University 
   education2: M.S. University of Texas at Dallas (2020)
   education3: M.S. Dalian University of Technology, China (2009)
   education4: B.S. Dalian University of Technology, China (2006)
@@ -36,7 +36,7 @@
   info2: 
   email: 
   number_educ: 3
-  education1: Ph.D. student Washington State University 
+  education1: Ph.D. student, Washington State University 
   education2: M.S. University of Mazandaran (2022)
   education3: B.S. Shomal University (2009)
 
