--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,7 +1,7 @@
-- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Jialuo He </a>
+- name: <a href="https://ce.wsu.edu/faculty/jialuo-he/"> Jialuo He </a>
   photo: JLH.jpg
-  info1: Director, National UTC TriDurLE
-  info2: 
+  info1: Research Assistant Professor
+  info2: Director, National UTC TriDurLE
   email: <a href="mailto:jialuo.he@wsu.edu">Email - jialuo.he@wsu.edu</a>
   number_educ: 3
   education1: Ph.D. Washington State University (2019)
