--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -10,7 +10,7 @@
   education3: M.S. Wuhan Polytechnic University, China (2017) 
   education4: B.S. Wuhan University of Sci and Tech, China
 
-- name: <a href="https://sjhu7.github.io/"> Meili (Mandy) Liu </a>
+- name: <a href="https://meililiu1019.github.io/"> Meili (Mandy) Liu </a>
   photo: MLL.jpg
   info1: Post-Doctoral Associate
   info2: 
