--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -5,7 +5,7 @@
   email: <a href="mailto:zaz336@miami.edu">Email - zaz336@miami.edu</a>
   number_educ: 4
   education1: Ph.D. student, University of Miami, FL (2024-)
-  education2: Ph.D. student, Washington State University, WA (2021-2024)
+  education2: Ph.D. student, Washington State University, WA 
   education3: M.S., University of Jinan, China
   education4: B.S. University of Jinan, China
 
@@ -16,7 +16,7 @@
   email: <a href="mailto:axm9090@miami.edu">Email - axm9090@miami.edu</a>
   number_educ: 3 
   education1: Ph.D. student, University of Miami, FL (2024-)
-  education2: Ph.D. student, Washington State University, WA (2022-2024)
+  education2: Ph.D. student, Washington State University, WA 
   education3: M.S. Armirkabir University of Technology, Iran.
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Chuang Chen </a>
