--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -5,9 +5,9 @@
   info2: 
   email: <a href="mailto:li_zhipeng@hotmail.com">Email - li_zhipeng@hotmail.com</a>
   number_educ: 4
-  education1: Ph.D. Washington State University (2023)
-  education2: M.S. Washington State University (2023)
-  education3: M.S. Wuhan Polytechnic University, China (2017) 
+  education1: Ph.D. Washington State University 
+  education2: M.S. Washington State University 
+  education3: M.S. Wuhan Polytechnic University, China 
   education4: B.S. Wuhan University of Sci and Tech, China
 
 - name: <a href="https://meililiu1019.github.io/"> Meili (Mandy) Liu </a>
@@ -16,8 +16,8 @@
   info2: 
   email: <a href="mailto:mxl2120@miami.edu">Email - mxl2120@miami.edu</a>
   number_educ: 3 
-  education1: Ph.D. University of California-Berkeley (2021)
-  education2: Ph.D. Beijing Normal University (2019) 
-  education3: B.S. Hunan Normal University (2016)
+  education1: Ph.D. University of California-Berkeley 
+  education2: Ph.D. Beijing Normal University 
+  education3: B.S. Hunan Normal University 
 
   
