--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -40,4 +40,14 @@
   education2: M.S. University of Mazandaran (2022)
   education3: B.S. Shomal University (2009)
 
+- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Akinleye Taiwo Olawale </a>
+  photo: Akinleye.jpg
+  info1: 
+  info2: 
+  email: 
+  number_educ: 3
+  education1: Ph.D. student, Washington State University 
+  education2: M.S. Washington State University (2021)
+  education3: M. Eng. The Federal University of Technology, Akure, Nigeria (2018)
+
   
