--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -1,6 +1,6 @@
 - name: <a href="https://ce.wsu.edu/faculty/jialuo-he/"> Jialuo He </a>
   photo: JLH.jpg
-  info1: Research Assistant Professor
+  info1: Research Assistant Professor at Dept. of Civil & Environmental Engineering of Washington State University
   info2: Director, National UTC TriDurLE
   email: <a href="mailto:jialuo.he@wsu.edu">Email - jialuo.he@wsu.edu</a>
   number_educ: 3
@@ -8,7 +8,7 @@
   education2: M.S. IIIinois Institute of Technology (2015)
   education3: M.S. Nanjing Tech University, China (2013)
 
-- name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Yong Deng </a>
+- name: <a href="https://www2.scut.edu.cn/jtxy/2024/0701/c35039a557997/page.htm"> Yong Deng </a>
   photo: DY.jpg
   info1: Research Fellow at South China University of Technology, China
   info2: 
@@ -49,8 +49,8 @@
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Seth Tawiah </a>
   photo: Seth.jpg
-  info1: 
-  info2: 
+  info1: Staff geotechnical Engineer at Haley & Aldrich Inch Company
+  info2: Loacation - Seattle
   email: 
   number_educ: 2
   education1: Ph.D. Washington State University (2024)
