--- a/_data/team1.yml
+++ b/_data/team1.yml
@@ -27,8 +27,8 @@
   number_educ: 4
   education1: Ph.D. student, Washington State University 
   education2: M.S. University of Texas at Dallas (2020)
-  education3: M.S. Dalian University of Technology, China (2009)
-  education4: B.S. Dalian University of Technology, China (2006)
+  education3: M.S. Dalian University of Technology, China 
+  education4: B.S. Dalian University of Technology, China
 
 - name: <a href="https://labs.wsu.edu/smartgreeninfrastructure/our-lab-team/"> Amir Ali Shahmansouri </a>
   photo: Amir.jpg
