--- a/_data/team2.yml
+++ b/_data/team2.yml
@@ -23,7 +23,7 @@
   number_educ: 1
   education1: B.S. Hunan University
 
-- name: Xin Lin
+- name: <a href="https://xinbr.github.io/cv/"> Xin Lin </a>
   photo: LX.jpeg
   info1: Research topic - Phase transition in porous media
   info2: WeChat - LX824KBLove
