--- a/_data/team4.yml
+++ b/_data/team4.yml
@@ -10,7 +10,7 @@
 
 - name: <a href="https://www2.scut.edu.cn/jtxy/2024/0701/c35039a557997/page.htm"> Yong Deng </a>
   photo: DY.jpg
-  info1: Research Fellow at South China University of Technology, China
+  info1: Associate professor at South China University of Technology, China
   info2: 
   email: <a href="mailto:yong.deng1@wsu.edu">Email - yong.deng1@wsu.edu</a>
   number_educ: 3
